add api and application layer and add docker compose with sql server

--- a/src/Common/Common.csproj
+++ b/src/Common/Common.csproj
@@ -21,4 +21,8 @@
       </Compile>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="12.5.0" />
+    </ItemGroup>
+
 </Project>
