--- a/src/Common/Common.csproj
+++ b/src/Common/Common.csproj
@@ -23,6 +23,7 @@
 
     <ItemGroup>
       <PackageReference Include="MediatR" Version="12.5.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
     </ItemGroup>
 
 </Project>
