add mass transit, domain events, event sourcing

--- a/src/Customers.Api/appsettings.json
+++ b/src/Customers.Api/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=ms-sql;Password=CS@#123456#!;Persist Security Info=True;User ID=sa;Initial Catalog=CustomerDb;TrustServerCertificate=True;"
+  },
+  "RabbitMqOptions": {
+    "Url": "rabbitmq",
+    "Username": "guest",
+    "Password": "guest"
   }
 }
