--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -18,7 +18,19 @@ services:
     volumes:
       - sql_data:/var/opt/mssql
     restart: unless-stopped
+  rabbitmq:
+      image: rabbitmq:3-management
+      container_name: rabbitmq
+      ports:
+        - "5672:5672"
+        - "15672:15672"
+      environment:
+        RABBITMQ_DEFAULT_USER: guest
+        RABBITMQ_DEFAULT_PASS: guest
+      volumes:
+        - rabbitmq_data:/var/lib/rabbitmq
 
 volumes:
   sql_data:
     name: sql_data
+  rabbitmq_data:
